--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Personajes de Rick and Morty",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server --open --mode development"
   },
   "author": "Razielini",
   "license": "ISC",
